--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+/gettysburg.py
+!/dt211c_scratch.py
+/tagcloud.py
